--- a/style.css
+++ b/style.css
@@ -15,6 +15,9 @@
 
 body {
   box-sizing: border-box;
+  overflow-x: hidden;
+  margin: 0;
+  padding: 0;
 }
 
 section {
@@ -41,22 +44,13 @@ h1 {
   margin: 1rem 0 1rem 0;
 }
 
-.results-header-div {
-  background: #333;
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 87%;
-  height: 70px;
-  width: 100%;
-  z-index: -1;
-}
-
 h2 {
-  margin-top: 1.7rem;
   text-align: center;
   font-size: 2rem;
+  margin: 1rem 0 1rem 0;
+  background: #333;
   color: #fff;
+  padding: 1.2rem 0;
   /* color: var(--second-color); */
 }
 
