--- a/style.css
+++ b/style.css
@@ -70,6 +70,10 @@ h2 {
   border-radius: 7px;
 }
 
+.type-button:hover {
+  cursor: pointer;
+}
+
 /** Add & Undo Buttons */
 
 .form-button button {
@@ -80,6 +84,10 @@ h2 {
   border-radius: 0.5rem;
   border: 2px solid black;
   width: 100%;
+}
+
+.form-button button:hover {
+  cursor: pointer;
 }
 
 #add {
@@ -137,7 +145,7 @@ li {
   form {
     padding: 1rem;
     border: 1px solid black;
-    /* border-radius: 25px; */
+    border-radius: 0.5rem;
     background: rgb(208, 208, 208);
     box-shadow: 0px 0px 20px -5px;
   }
